force-app/main/default/objects/POS_Setting__mdt/POS_Setting__mdt.object-meta.xml
<CustomObject>
    <label>POS Setting</label>
    <pluralLabel>POS Settings</pluralLabel>
</CustomObject>