force-app/main/default/objects/POS_Setting__mdt/fields/Discount_Passcode__c.field-meta.xml
<CustomField>
    <fullName>Discount_Passcode__c</fullName>
    <label>Discount Passcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>