force-app/main/default/objects/POS_Setting__mdt/fields/Display_Cash_Drawer__c.field-meta.xml
<CustomField>
    <fullName>Display_Cash_Drawer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Cash Drawer</label>
    <type>Checkbox</type>
</CustomField>