force-app/main/default/objects/POS_Setting__mdt/fields/Display_Gcash__c.field-meta.xml
<CustomField>
    <fullName>Display_Gcash__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Gcash</label>
    <type>Checkbox</type>
</CustomField>