force-app/main/default/objects/POS_Setting__mdt/fields/VFP_Url__c.field-meta.xml
<CustomField>
    <fullName>VFP_Url__c</fullName>
    <label>VFP Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>